# tsfire

./: .gitignore  AGENTS.md  Cargo.toml  INIT.md  README.md  agents.md  build.rs
.github/workflows/: rust.yml
src/: build.rs  cache.rs  font.rs  image_handler.rs  layout.rs  lib.rs  main.rs  network.rs  paint.rs  parse.rs  parsing.rs  render.rs  style.rs  stylo_integration.rs  ui_shit.rs  window.rs
src/cmod/: font_handler.c  image_handler.c
src/parsing/: parse.rs  style.rs  stylo_integration.rs  tree.rs
src/ui_shit/: cpu_renderer.rs  display_renderer.rs  layout.rs  paint.rs  window.rs
src/ui_shit/shaders/: pipeline.wgsl
